<resources>
    <string name="app_name">UNMA</string>

    <string name="connection_error">Tidak dapat terhubung ke internet!</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="msg_login_success">Login sukses</string>
    <string name="msg_logging_in">Sedang login…</string>

    <string name="err_username_empty">NPM harus diisi</string>
    <string name="err_password_empty">Password harus diisi</string>
    <string name="err_malformed_username">Format NPM tidak benar</string>
    <string name="err_no_connectivity">Tidak ada koneksi jaringan</string>
    <string name="err_cant_connect">Tidak dapat terhubung ke server</string>
    <string name="err_unknown">Terjadi kesalahan. Silakan coba lagi</string>
    <string name="title_about">Tentang</string>
    <string name="about_developer_name">Abdul Aris Rahmanudin</string>
    <string name="about_developer">Pengembang:</string>
    <string name="login_username">Npm</string>
    <string name="login_password">Password</string>
    <string name="login_login_text">Login</string>
    <string name="no_data_text">Tidak ada data untuk ditampilkan</string>
    <string name="description_text">Deskripsi:</string>
    <string name="action_menu_show_all">Tampil semua</string>
    <string name="action_menu_show_unread">Tampil belum dibaca</string>
    <string name="action_menu_show_read">Tampil dibaca</string>
    <string name="action_menu_show_attachment">Tampil berlampiran</string>
    <string name="action_menu_force_refresh">Reset data</string>
    <string name="action_menu_filter">Filter</string>
    <string name="action_nav_announcements">Pengumuman</string>
    <string name="action_nav_media">Media</string>
    <string name="action_nav_settings">Pengaturan</string>
    <string name="action_nav_about">Tentang</string>
    <string name="action_nav_logout">Logout</string>
    <string name="text_loading">Loading</string>
    <string name="text_rendering">Rendering</string>
    <string name="text_write_permission_denied">Permission denied, silakan izinkan untuk men-download!</string>
    <string name="text_download_failed">Gagal men-download</string>
    <string name="title_announcements">Pengumuman</string>
    <string name="title_attachment_files">Berkas Lampiran</string>
    <string name="about_unma">(UNMA)</string>
    <string name="about_unma_cont">UNMA Mobile Announcement</string>
    <string name="action_nav_profile">Profil</string>
    <string name="no_description">Tidak ada deskripsi</string>
    <string name="description">Deskripsi</string>
    <string name="update_password_empty_error"><![CDATA[Masukan password lama & baru]]></string>
    <string name="update_password_same_pass"><![CDATA[Password lama & baru harus berbeda]]></string>
    <string name="notification_title">UNMA Inbox</string>
    <string name="title_settings">Pengaturan</string>

    <string name="pref_notification_sound">pref_notification_sound</string>
    <string name="pref_in_app_notification_sound">pref_in_app_notification_sound</string>
    <string name="pref_vibrate">Getar</string>

    <string name="in_app_notif_no_connectivity">Tidak ada konektivitas jaringan :(</string>
    <string name="in_app_auto_refresh_notif">Mengambil data baru dari server</string>
    <string name="download_success">Download sukses!</string>
    <string name="text_help">Untuk login sebagai mahasiswa pastikan \'Login sebagai dosen?\' tidak dicentang lalu masukan NPM dan password akun-nya.\nformat NPM. misal 14.14.1.0000\n\nUntuk login sebagai dosen pastikan \'Login sebagai dosen?\' dicentang lalu masukan NIDN dan password akun-nya.\nformat NIDN. misal 0123123123</string>
    <string name="text_nidn">Nidn</string>
    <string name="text_npm">Npm</string>
    <string name="err_username_empty_2">NIDN harus diisi</string>
    <string name="err_malformed_username_2">Format NIDN tidak benar</string>
    <string name="text_warning">Perhatian!</string>
    <string name="text_google_play_services_unavail">Aplikasi tidak akan menerima pemberitahuan karena Google Play Services tidak terpasang atau telah terjadi kesalahan. Silakan pasang atau perbarui Google Play Services pada perangkat anda.</string>
    <string name="text_unsupported_device">Maaf, perangkat anda belum dapat didukung.</string>
    <string name="text_unavailable">Tidak tersedia.</string>
    <string name="action_menu_randomize_date_box_color">Acak warna tanggal</string>
    <string name="settings_item_vibrate">Getar</string>
    <string name="settings_item_inapp_notif">Suara Notifikasi In App</string>
    <string name="settings_item_notif_sound">Suara Notifikasi</string>
    <string name="settings_category_title">Notifikasi</string>
    <string name="text_profile_detail">Detil Profil</string>
    <string name="text_name">Nama</string>
    <string name="text_username">Username</string>
    <string name="text_class">Kelas</string>
    <string name="text_update_password">Ubah Password</string>
    <string name="text_old_password">Password Sekarang</string>
    <string name="text_new_password">Password Baru</string>
    <string name="text_password_updated">Password berhasil diubah</string>
    <string name="text_profile">Profil</string>
</resources>
